Reservation cancel Buttons horizontal alignment Fixed bug when training was creating with wrong instructor id

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,7 +7,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 .card {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .btn {
